# inglenook-solver

./: README.md  cpanfile  pyproject.toml  solver_design_descisions.md  test_pygame.py
docs/: inglenook_shunting_puzzle.md  technology_choice.md
lib/Inglenook/: State.pm
src/inglenook_solver/solver/: state.py
t/unit/: State.t
tests/solver/: test_state.py
