[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inglenook-solver"
version = "0.1.0"
description = "Inglenook Shunting Puzzle solver and Pygame UI"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-dir]
"" = "src"
